# yang-demo-zeroseg

./: Makefile.am  README  configure.ac  lsi-demo-line-display-dynamic-remote.yang  lsi-demo-line-display-instance-id.yang  lsi-demo-line-display.yang  worker.py  yang-demo-line-display.py  yang-demo-line-display.service
debian/: changelog  control  yang-demo-line-display.yang-demo-line-display.service
debian/systemd/: yang-demo-line-display.service
