AC_INIT([yang-demo-line-display], [1.0], [vladimir@lightside-instruments.com])

AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE([-Werror foreign])

netconfmoduledir="$libdir/yuma"
AC_SUBST(netconfmoduledir)

examples_yangdir="$prefix/share/yuma/modules/examples"
AC_SUBST(examples_yangdir)


AC_CONFIG_FILES([
        Makefile
])

AC_OUTPUT
